Update: outline removed from tweet section and updated in TweetBox.css and TweetBox.js Update: cursor pointer added in sidebar twitter icon, and path added

--- a/src/TweetBox.css
+++ b/src/TweetBox.css
@@ -12,7 +12,7 @@
 .tweetBox__input {
   padding: 20px;
   display: flex;
-  
+
 }
 
 .tweetBox__input > input {
@@ -25,6 +25,10 @@
 .tweetBox__imageInput {
   border: none;
   padding: 10px;
+}
+
+.remove-outline:focus-visible{
+  outline: none;
 }
 
 .tweetBox__tweetButton {
