--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -10,7 +10,7 @@
 .sidebar__twitterIcon {
   color: var(--twitter-color);
   font-size: 30px !important;
-  margin-left: 20px;
+  margin-left: 20px !important;
   margin-bottom: 20px;
   cursor: pointer;
 }
